--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "exceljs": "^4.3.0",
     "iconv-lite": "^0.6.3",
     "image-downloader": "^4.3.0",
     "papaparse": "^5.3.2",
